Fix: Thumbnails cropping as squares
Update style.css

--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@ output {
     bottom: 0;
     right: 0;
     left: 0;
+    object-fit: scale-down;
     position: absolute;
     overflow: hidden;
     background-image: url(../img/thorntontomasetti.jpg);
